la till flex column i profil

--- a/karl.html
+++ b/karl.html
@@ -49,7 +49,50 @@
         <div class="centered"><h1>Karls</h1></div>
         <div class="centered2"><p><h3>Profil</h3></p></div>
       </div>
+      <!--stepstep-->
+      <section class="background-light">
+        <div class="containers">
+          <h2 class="text-center">Karl Karlsson</h2>
+          <div class="split">
+            <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
+            </div>
+            <div>
+              <p>Qui iusto ducimus illo rem maxime exercitationem pariatur atque assumenda sunt beatae neque quo necessitatibus blanditiis, odit, totam aliquid omnis cumque ea magni magnam numquam?</p>
+            </div>
+          </div>
+        </div>
+      </section>
 
+      <section class="background-dark">
+        <div class="containers">
+          <div class="split">
+            <div>
+              <h2>Lite om mig</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sint et doloribus alias, atque aut.</p>
+            </div>
+            <div>
+              <img src="/HTML_CSS_projektarbete/img/dog1.jpg" alt="hund1">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="background-primary">
+        <div class="containers">
+          <div class="split">
+            <div>
+              <img src="/HTML_CSS_projektarbete/img/dog2.jpg" alt="hund2">
+            </div>
+            <div>
+              <h2>Vad jag gör</h2>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--imgslider-->
       <div class="carousel-container">
             <i class="fas fa-arrow-left" id="prevBtn"></i>
             <i class="fas fa-arrow-right" id="nextBtn"></i>
