--- a/karl.html
+++ b/karl.html
@@ -69,7 +69,8 @@
           <div class="split">
             <div>
               <h2>Lite om mig</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas sint et doloribus alias, atque aut.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, voluptatem debitis expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
             </div>
             <div>
               <img src="/HTML_CSS_projektarbete/img/dog1.jpg" alt="hund1">
@@ -87,6 +88,8 @@
             <div>
               <h2>Vad jag gör</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora modi ducimus, numquam iure rem ipsum eveniet molestias! Necessitatibus vero animi cupiditate dicta quasi non quis nesciunt modi sit. Sequi consequuntur maiores rem ea. Tempore, mollitia.</p>
             </div>
           </div>
         </div>
