--- a/Index.html
+++ b/Index.html
@@ -164,11 +164,11 @@
             <div class="accordion-item ">
               <h2 class="accordion-header" id="heading2">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2"
-                  aria-expanded="true" aria-controls="collapse2">
+                  aria-expanded="false" aria-controls="collapse2">
                   Information och utbildning
                 </button>
               </h2>
-              <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2"
+              <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2"
                 data-bs-parent="#accordionHund">
                 <div class="accordion-body">
                   Svenska Dvärgschnauzer  sprider kunskap om nyttan och glädjen av att ha hund och verkar för att stärka hundens rättigheter och plats i samhället. Vi anordnar utbildningar för domare och övriga funktionärer inom organisationen. Vi har även skapat en skräddarsydd utbildning som särskilt vänder sig till våra uppfödare.
