index and style edit

--- a/Index.html
+++ b/Index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hund sida</title>
+  <title>Hund Train Websida</title>
+  <meta name="description" content="Here you can find best train place for your dog!"/>
+  <meta name="author" content="traindog.se"/>
   <link rel="stylesheet" href="/css/bootstrap.css">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/bootstrap-grid.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
-
 </head>
 
 <body>
@@ -163,7 +163,7 @@
             </div>
             <div class="accordion-item ">
               <h2 class="accordion-header" id="heading2">
-                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2"
+                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2"
                   aria-expanded="false" aria-controls="collapse2">
                   Information och utbildning
                 </button>
