Tog bort imgslider

--- a/karl.html
+++ b/karl.html
@@ -45,11 +45,14 @@
         </nav>
       </header>
       <div class="tophead">
+        <div class="banner">
         <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
-        <div class="centered"><h1>Karls</h1></div>
-        <div class="centered2"><p><h3>Profil</h3></p></div>
+          </div>
+          <div class="centered"><h1>Karls</h1></div>
+          <div class="centered2"><p><h3>Profil</h3></p></div>
       </div>
-      <!--stepstep-->
+
+      <!--profileinfo-->
       <section class="background-light">
         <div class="containers">
           <h2 class="text-center">Karl Karlsson</h2>
@@ -96,18 +99,7 @@
       </section>
 
       <!--imgslider-->
-      <div class="carousel-container">
-            <i class="fas fa-arrow-left" id="prevBtn"></i>
-            <i class="fas fa-arrow-right" id="nextBtn"></i>
-
-        <div class="carousel-slide">
-          <img src="img/dog3.jpg" id="lastClone" alt="dog3">
-          <img src="img/dog1.jpg" alt="dog1">
-          <img src="img/dog2.jpg" alt="dog2">
-          <img src="img/dog3.jpg" alt="dog3">
-          <img src="img/dog1.jpg" id="firstClone" alt="dog1">
-        </div>
-      </div>
+      
       
 
 
