--- a/aboutus.html
+++ b/aboutus.html
@@ -6,10 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kontakt</title>
-  <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/contact.css">
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <link rel="stylesheet" href="css/bootstrap-grid.css">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
   <meta name="author" content="Simon Björnfors">
@@ -60,7 +60,10 @@
     <section class="content">
       <div class="content-grid">
         <div>
-          <h3>Hitta till oss <i class="bi bi-geo-alt"></i></h3>
+          <h3>Hitta till våra hundar i Halmstad <i class="bi bi-geo-alt"></i></h3>
+          <div class="contact-info">
+            <p>Linjegatan 7, 302 50 Halmstad, Sverige</p>
+          </div>
           <div id="map"></div>
         </div>
         <form class="form-grid">
@@ -96,10 +99,28 @@
 <footer class="footer p-5 bg-light mt-3">
   <div class="container">
     <div class="row g-3">
-        <div class="col-md-6 text-center text-md-start">
+      <div class="col-md-4 text-center">
+        <ul class="nav">
+          <li class="nav-item"> 
+          <a href="/Index.html" class="nav-link text-dark">Home</a>
+          </li>
+          <li class="nav-item">
+          <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+          </li>
+          <li class="nav-item">
+          <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+          </li>
+          <li class="nav-item">
+          <a href="/blog.html" class="nav-link text-dark">Blog</a>
+          </li>
+          <li class="nav-item">
+          <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+        </ul>
+      </div>
+        <div class="col-md-4 text-center text-md-start">
           <p class="lead">Copyright &copy; 2021 Projektarbete HTML CSS</p>
         </div>
-        <div class="col-md-6 text-center text-md-end h4">
+        <div class="col-md-4 text-center text-md-end h4">
           <a href="https://www.twitter.com"><i class="bi bi-twitter text-dark mx-1"></i></a>
           <a href="https://www.facebook.com"><i class="bi bi-facebook text-dark mx-1"></i></a>
           <a href="https://www.instagram.com"><i class="bi bi-instagram text-dark mx-1"></i></a>
@@ -107,6 +128,7 @@
     </div>
   </div>
 </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
