Knappar till black, margin runt body

--- a/karl.html
+++ b/karl.html
@@ -58,7 +58,7 @@
           <h2 class="text-center">Karl Karlsson</h2>
           <div class="split">
             <div>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
+              <p>Lorem ipsum dolor sit, Hundar i Halmstad, amet consectetur adipisicing elit. Dolorem asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
             </div>
             <div>
               <p>Qui iusto ducimus illo rem maxime exercitationem pariatur atque assumenda sunt beatae neque quo necessitatibus blanditiis, odit, totam aliquid omnis cumque ea magni magnam numquam?</p>
@@ -72,8 +72,8 @@
           <div class="split">
             <div>
               <h2>Lite om mig</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, voluptatem debitis expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
+              <p>Lorem ipsum dolor sit amet consectetur Hundar i Halmstad adipisicing elit. Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, Hundar i Halmstad voluptatem debitis expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
             </div>
             <div>
               <img src="/HTML_CSS_projektarbete/img/dog1.jpg" alt="hund1">
