--- a/organisation.html
+++ b/organisation.html
@@ -45,7 +45,9 @@
         </nav>
       </header>
 <div class="tophead">
+  <div class="banner">
   <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
+</div>
   <div class="centered"><h1>Organisation</h1></div>
   <div class="centered2"><p><h3>Our coworkers</h3></p></div>
 </div>
@@ -61,7 +63,7 @@
       <p><h5>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</h5></p>
       <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
-      <a href="karl.html" class="btn btn-primary btn-sm">Karls profil></a>
+      <a href="karl.html" class="btn btn-dark btn-sm">Karls profil></a>
     </div>
     <div class="container col-sm-4 border border-5 border-white">
       <div class="text-center">
@@ -73,7 +75,7 @@
       <p><h5>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</h5></p>
       <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam vel molestias maiores ut quaerat ex eum praesentium, optio officiis non!</p>
-      <a href="/HTML_CSS_projektarbete/erika.html" class="btn btn-primary btn-sm">Erikas profil></a>
+      <a href="/HTML_CSS_projektarbete/erika.html" class="btn btn-dark btn-sm">Erikas profil></a>
     </div>
     <div class="container col-sm-4 border border-5 border-white">
       <div class="text-center">
@@ -86,7 +88,7 @@
       <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
       <br>
-      <a href="/HTML_CSS_projektarbete/egon.html" class="btn btn-primary btn-sm">Egons profil></a>
+      <a href="/HTML_CSS_projektarbete/egon.html" class="btn btn-dark btn-sm">Egons profil></a>
     </div>
   </div>
 </div>
