--- a/erika.html
+++ b/erika.html
@@ -44,23 +44,61 @@
         </nav>
       </header>
       <div class="tophead">
+        <div class="banner">
         <img src="/HTML_CSS_projektarbete/img/hund.jpg" class="responsive" alt="banner">  
+      </div>
         <div class="centered"><h1>Erikas</h1></div>
         <div class="centered2"><p><h3>Profil</h3></p></div>
       </div>
-      <div class="carousel-container">
-        <i class="fas fa-arrow-left" id="prevBtn"></i>
-        <i class="fas fa-arrow-right" id="nextBtn"></i>
-    
-    <div class="carousel-slide">
-      <img src="img/dog3.jpg" id="lastClone" alt="dog3">
-      <img src="img/dog1.jpg" alt="dog1">
-      <img src="img/dog2.jpg" alt="dog2">
-      <img src="img/dog3.jpg" alt="dog3">
-      <img src="img/dog1.jpg" id="firstClone" alt="dog1">
-    </div>
-  </div>
-  
+
+      <!--profileinfo-->
+      <section class="background-light">
+        <div class="containers">
+          <h2 class="text-center">Erika Karlsson</h2>
+          <div class="split">
+            <div>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
+            </div>
+            <div>
+              <p>Qui iusto ducimus illo rem maxime exercitationem pariatur atque assumenda sunt beatae neque quo necessitatibus blanditiis, odit, totam aliquid omnis cumque ea magni magnam numquam?</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="background-dark">
+        <div class="containers">
+          <div class="split">
+            <div>
+              <h2>Lite om mig</h2>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, voluptatem debitis expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
+            </div>
+            <div>
+              <img src="/HTML_CSS_projektarbete/img/dog1.jpg" alt="hund1">
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="background-primary">
+        <div class="containers">
+          <div class="split">
+            <div>
+              <img src="/HTML_CSS_projektarbete/img/dog2.jpg" alt="hund2">
+            </div>
+            <div>
+              <h2>Vad jag gör</h2>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
+              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora modi ducimus, numquam iure rem ipsum eveniet molestias! Necessitatibus vero animi cupiditate dicta quasi non quis nesciunt modi sit. Sequi consequuntur maiores rem ea. Tempore, mollitia.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!--imgslider-->
+      
 
 <script src="https://kit.fontawesome.com/0b12803b73.js" crossorigin="anonymous"></script>
 <script src="/HTML_CSS_projektarbete/js/slideshow.js"></script>      
