SEO "hundar i halmstad

--- a/karl.html
+++ b/karl.html
@@ -91,7 +91,7 @@
             <div>
               <h2>Vad jag gör</h2>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
+              <p>Lorem ipsum, dolor sit amet consectetur Hundar i Halmstad adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
               <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora modi ducimus, numquam iure rem ipsum eveniet molestias! Necessitatibus vero animi cupiditate dicta quasi non quis nesciunt modi sit. Sequi consequuntur maiores rem ea. Tempore, mollitia.</p>
             </div>
           </div>
