--- a/organisation.html
+++ b/organisation.html
@@ -62,7 +62,7 @@
       <br>
       <p><h5>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</h5></p>
       <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
+      <p>Lorem ipsum dolor sit amet consectetur Hundar i Halmstad adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
       <a href="karl.html" class="btn btn-dark btn-sm">Karls profil></a>
     </div>
     <div class="container col-sm-4 border border-5 border-white">
@@ -73,7 +73,7 @@
       </div>
       <br>
       <p><h5>Erika som brukar mecka med gamla amerikanska bilar när hon inte håller på med hundarna</h5></p>
-      <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
+      <p><strong>Ut enim ad minim veniam, quis nostrud Hundar i Halmstad exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam vel molestias maiores ut quaerat ex eum praesentium, optio officiis non!</p>
       <a href="/HTML_CSS_projektarbete/erika.html" class="btn btn-dark btn-sm">Erikas profil></a>
     </div>
@@ -85,7 +85,7 @@
       </div>
       <br>
       <p><h5>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</h5></p>
-      <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
+      <p><strong>Ut enim ad minim veniam, quis nostrud Hundar i Halmstad exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
       <br>
       <a href="/HTML_CSS_projektarbete/egon.html" class="btn btn-dark btn-sm">Egons profil></a>
