--- a/erika.html
+++ b/erika.html
@@ -57,7 +57,7 @@
           <h2 class="text-center">Erika Karlsson</h2>
           <div class="split">
             <div>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolorem Hundar i Halmstad asperiores tempora amet sit tenetur corporis labore explicabo velit, numquam in dolores quidem, saepe rerum culpa!</p>
             </div>
             <div>
               <p>Qui iusto ducimus illo rem maxime exercitationem pariatur atque assumenda sunt beatae neque quo necessitatibus blanditiis, odit, totam aliquid omnis cumque ea magni magnam numquam?</p>
@@ -71,8 +71,8 @@
           <div class="split">
             <div>
               <h2>Lite om mig</h2>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, voluptatem debitis expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hundar i Halmstad Veritatis, accusamus? Libero eligendi, consectetur tempora doloribus distinctio atque provident magni aliquid rem itaque error eius ipsum alias, esse maxime soluta quos. Deserunt quibusdam neque laborum. Temporibus beatae saepe ipsa veniam? Qui voluptate recusandae consequatur nulla officia sapiente vitae quasi, architecto veniam?</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non atque molestiae voluptate nesciunt, voluptatem debitis Hundar i Halmstad expedita porro tempora voluptatibus accusantium? Quasi autem ipsam numquam nesciunt nulla modi odit recusandae, cumque perspiciatis alias voluptates sint iste iure inventore quod vero ipsa soluta quae optio necessitatibus dolores reiciendis. Hic ipsam in non.</p>
             </div>
             <div>
               <img src="/HTML_CSS_projektarbete/img/dog1.jpg" alt="hund1">
@@ -89,9 +89,9 @@
             </div>
             <div>
               <h2>Vad jag gör</h2>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
-              <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
-              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora modi ducimus, numquam iure rem ipsum eveniet molestias! Necessitatibus vero animi cupiditate dicta quasi non quis nesciunt modi sit. Sequi consequuntur maiores rem ea. Tempore, mollitia.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iure odit Hundar i Halmstad ipsa, fuga natus eum autem quod maiores labore praesentium tenetur.</p>
+              <p>Lorem ipsum, dolor sit amet Hundar i Halmstad consectetur adipisicing elit. Obcaecati eligendi numquam, aut in eveniet ex deserunt eius. Inventore fugit beatae ipsa dolores illum, consequuntur voluptatem distinctio incidunt! Officia, possimus nam.</p>
+              <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hundar i Halmstad Tempora modi ducimus, numquam iure rem ipsum eveniet molestias! Necessitatibus vero animi cupiditate dicta quasi non quis nesciunt modi sit. Sequi consequuntur maiores rem ea. Tempore, mollitia.</p>
             </div>
           </div>
         </div>
