--- a/organisation.html
+++ b/organisation.html
@@ -60,7 +60,7 @@
       <img src="/HTML_CSS_projektarbete/img/kalle.jpg" class="responsive" alt="karl" width="320px" height="450px" ></a>    
       </div>
       <br>
-      <p><h5>Karl som förutom intresset för hundar brinner för att hålla trädgården i snyggt skick</h5></p>
+      <p><h5>Karl som förutom intresset för hundar i Halmstad brinner för att hålla trädgården i snyggt skick</h5></p>
       <p><strong>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</strong></p>
       <p>Lorem ipsum dolor sit amet consectetur Hundar i Halmstad adipisicing elit. Tempore est voluptates quasi ducimus totam qui modi consequuntur ex corporis velit.</p>
       <a href="karl.html" class="btn btn-dark btn-sm">Karls profil></a>
@@ -86,7 +86,7 @@
       <br>
       <p><h5>jobbar pluggar på teknik på gymnasiet och egentligen är ganska trött på alla hundar</h5></p>
       <p><strong>Ut enim ad minim veniam, quis nostrud Hundar i Halmstad exercitation ullamco laboris...</strong></p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing Hundar i Halmstad elit. Laudantium, odit. Quam consequatur aliquid officia amet quod asperiores facilis minima officiis?</p>
       <br>
       <a href="/HTML_CSS_projektarbete/egon.html" class="btn btn-dark btn-sm">Egons profil></a>
     </div>
