--- a/aboutus.html
+++ b/aboutus.html
@@ -8,7 +8,7 @@
   <title>Kontakt</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-grid.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/allstyle.css">
   <link rel="stylesheet" href="css/contact.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css' rel='stylesheet' />
