--- a/Index.html
+++ b/Index.html
@@ -9,8 +9,7 @@
   <meta name="description" content="Here you can find best train place for your dog!" />
   <meta name="author" content="traindog.se" />
   <link rel="stylesheet" href="/css/bootstrap.css">
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="/css/allstyle.css">
   <!-- Ikoner till footer -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
