--- a/egon.html
+++ b/egon.html
@@ -10,6 +10,7 @@
   <title>Hund sida</title>
   <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/bootstrap.css">
   <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
     <header>
@@ -99,6 +100,40 @@
 
         <!--imgslider-->
           
+
+        <!--footer-->
+<footer class="footer p-5 bg-light mt-3">
+  <div class="container">
+    <div class="row g-3">
+      <div class="col-md-4 text-center">
+        <ul class="nav">
+          <li class="nav-item"> 
+          <a href="/Index.html" class="nav-link text-dark">Home</a>
+          </li>
+          <li class="nav-item">
+          <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+          </li>
+          <li class="nav-item">
+          <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+          </li>
+          <li class="nav-item">
+          <a href="/blog.html" class="nav-link text-dark">Blog</a>
+          </li>
+          <li class="nav-item">
+          <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+        </ul>
+      </div>
+        <div class="col-md-4 text-center text-md-start">
+          <p class="lead">Copyright &copy; 2021 Projektarbete HTML CSS</p>
+        </div>
+        <div class="col-md-4 text-center text-md-end h4">
+          <a href="https://www.twitter.com"><i class="bi bi-twitter text-dark mx-1"></i></a>
+          <a href="https://www.facebook.com"><i class="bi bi-facebook text-dark mx-1"></i></a>
+          <a href="https://www.instagram.com"><i class="bi bi-instagram text-dark mx-1"></i></a>
+        </div>
+    </div>
+  </div>
+</footer>
 
 
 <script src="https://kit.fontawesome.com/0b12803b73.js" crossorigin="anonymous"></script>
