--- a/blog.html
+++ b/blog.html
@@ -5,9 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Blogsidan</title>
-    <link rel="stylesheet" href="/CSS/bootstrap.css" />
-    <link rel="stylesheet" href="/CSS/style.css" />
-    <link rel="stylesheet" href="/CSS/blog.css" />
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/blog.css" />
+    <link rel="stylesheet" href="css/allstyle.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   </head>
   <header>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -38,6 +40,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
@@ -217,6 +222,40 @@
         </main>
       </div>
     </div>
+
+    <footer class="footer p-5 bg-light mt-3">
+      <div class="container">
+        <div class="row g-3">
+          <div class="col-md-4 text-center">
+            <ul class="nav">
+              <li class="nav-item"> 
+              <a href="/Index.html" class="nav-link text-dark">Home</a>
+              </li>
+              <li class="nav-item">
+              <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+              </li>
+              <li class="nav-item">
+              <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+              </li>
+              <li class="nav-item">
+              <a href="/blog.html" class="nav-link text-dark">Blog</a>
+              </li>
+              <li class="nav-item">
+              <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+            </ul>
+          </div>
+            <div class="col-md-4 text-center text-md-start">
+              <p class="lead">Copyright &copy; 2021 Projektarbete HTML CSS</p>
+            </div>
+            <div class="col-md-4 text-center text-md-end h4">
+              <a href="https://www.twitter.com"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="https://www.facebook.com"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="https://www.instagram.com"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="/js/blog.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
