--- a/ourdogs.html
+++ b/ourdogs.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Våra hundar</title>
         <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/allstyle.css">
         <link rel="stylesheet" href="/css/bootstrap-grid.css">
         <link rel="stylesheet" href="/css/product.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
@@ -55,7 +55,7 @@
                         <div class="img-text text-center">
                            <h3 class="mt-2 border-bottom">Aurora</h3>
                       </a>
-                           <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis, ab.</p>
+                           <p>Lorem ipsum dolor sit, Hundar i Halmstad amet consectetur adipisicing elit. Nobis, ab.</p>
                         </div>
                     </div>
                     <div class="col-3 mt-4 img-border">
@@ -64,7 +64,7 @@
                         <div class="img-text text-center">
                            <h3 class="mt-2 border-bottom">Kenzo</h3>
                       </a>     
-                           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, laboriosam.</p>
+                           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hundar i Halmstad Iure, laboriosam.</p>
                         </div>
                     </div>
                     <div class="col-3 mt-4 img-border">
@@ -73,7 +73,7 @@
                         <div class="img-text text-center">
                            <h3 class="mt-2 border-bottom">Luna</h3>
                       </a>
-                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, soluta.</p>
+                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hundar i Halmstad Quae, soluta.</p>
                         </div>
                     </div>
                 </div>
