--- a/kenzo.html
+++ b/kenzo.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Våra hundar</title>
         <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/style.css">
+        <link rel="stylesheet" href="/css/allstyle.css">
         <link rel="stylesheet" href="/css/bootstrap-grid.css">
         <link rel="stylesheet" href="/css/product.css">
         <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
@@ -79,12 +79,12 @@
     
                 <div class="description border mt-4">
                   <p class="p-4 text-center">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Hundar i Halmstad Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                     Temporibus magnam repudiandae deserunt optio magni, accusamus modi, exercitationem, 
                     aliquam quibusdam in pariatur eos dolorum reiciendis? 
                     Ea rem fugit autem cupiditate consequatur cumque non animi dolorem delectus aspernatur nisi doloribus, 
                     provident quisquam. Sapiente numquam mollitia laudantium, explicabo quaerat in voluptates ut. 
-                    Ducimus magni facere nulla quod facilis! Atque quam repudiandae quas nisi tempore provident in! 
+                    Ducimus magni facere nulla quod facilis! Hundar i Halmstad Atque quam repudiandae quas nisi tempore provident in! 
                     Suscipit est facilis dolorem voluptatibus ipsa quos ducimus quo ex quidem, 
                     nulla veniam doloremque blanditiis nemo error qui nesciunt voluptas. 
                     Quam, enim. Necessitatibus soluta beatae accusantium veritatis totam ipsum! 
