--- a/ourdogs.html
+++ b/ourdogs.html
@@ -1,85 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Våra hundar</title>
-        <link rel="stylesheet" href="/css/bootstrap.css">
-        <link rel="stylesheet" href="/css/allstyle.css">
-        <link rel="stylesheet" href="/css/bootstrap-grid.css">
-        <link rel="stylesheet" href="/css/product.css">
-        <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
-    </head>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Våra hundar</title>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/allstyle.css">
+    <link rel="stylesheet" href="css/bootstrap-grid.css">
+    <link rel="stylesheet" href="css/product.css">
 
-    <body>
-        <header>
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container">
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico" style="width: 20px;">
-                      Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/ourdogs.html">Our dogs</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/aboutus.html">Who we are</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/blog.html">Blog</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
-        </header>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="shortcut icon" type="image/x-icon" href="img/dog-face.ico">
+</head>
 
-        <main>
-            <div class="container p-3 pt-4 mt-4 bg-secondary text-center text-white">
-               <h1 class="display-5">Våra hundar</h1>
-                <p>Lorem ipsum dolor sit amet.</p>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-3 mt-4 img-border">
-                      <a href="/aurora.html">
-                        <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="img-text text-center">
-                           <h3 class="mt-2 border-bottom">Aurora</h3>
-                      </a>
-                           <p>Lorem ipsum dolor sit, Hundar i Halmstad amet consectetur adipisicing elit. Nobis, ab.</p>
-                        </div>
-                    </div>
-                    <div class="col-3 mt-4 img-border">
-                      <a href="/kenzo.html">
-                        <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="img-text text-center">
-                           <h3 class="mt-2 border-bottom">Kenzo</h3>
-                      </a>     
-                           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hundar i Halmstad Iure, laboriosam.</p>
-                        </div>
-                    </div>
-                    <div class="col-3 mt-4 img-border">
-                      <a href="/luna.html">
-                        <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
-                        <div class="img-text text-center">
-                           <h3 class="mt-2 border-bottom">Luna</h3>
-                      </a>
-                           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hundar i Halmstad Quae, soluta.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+          data-bs-target="#SmallScreenNavigationBar" aria-controls="SmallScreenNavigationBar" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/Index.html"><img src="img/dog-face.ico" style="width: 20px;">
+                Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="/ourdogs.html">Our dogs</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/aboutus.html">Who we are</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/blog.html">Blog</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
 
-            <footer></footer>
-        </main>
-    </body>
+  <main>
+    <div class="container p-3 pt-4 mt-4 bg-secondary text-center text-white">
+      <h1 class="display-5">Våra hundar</h1>
+       <p>Lorem ipsum dolor sit amet.</p>
+   </div>
+   <div class="container">
+    <div class="row">
+      <div class="col-3 mt-4 img-border">
+        <a href="/aurora.html">
+          <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+          <div class="img-text text-center">
+             <h3 class="mt-2 border-bottom">Aurora</h3>
+        </a>
+             <p>Lorem ipsum dolor sit, Hundar i Halmstad amet consectetur adipisicing elit. Nobis, ab.</p>
+          </div>
+      </div>
+      <div class="col-3 mt-4 img-border">
+        <a href="/kenzo.html">
+          <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+          <div class="img-text text-center">
+             <h3 class="mt-2 border-bottom">Kenzo</h3>
+        </a>     
+             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hundar i Halmstad Iure, laboriosam.</p>
+          </div>
+      </div>
+      <div class="col-3 mt-4 img-border">
+        <a href="/luna.html">
+          <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
+          <div class="img-text text-center">
+             <h3 class="mt-2 border-bottom">Luna</h3>
+        </a>
+             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hundar i Halmstad Quae, soluta.</p>
+          </div>
+      </div>
+    </div>
+   </div>
+   <footer class="footer p-5 bg-light mt-3">
+    <div class="container">
+      <div class="row g-3">
+        <div class="col-md-4 text-center">
+          <ul class="nav">
+            <li class="nav-item"> 
+            <a href="/Index.html" class="nav-link text-dark">Home</a>
+            </li>
+            <li class="nav-item">
+            <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+            </li>
+            <li class="nav-item">
+            <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+            </li>
+            <li class="nav-item">
+            <a href="/blog.html" class="nav-link text-dark">Blog</a>
+            </li>
+            <li class="nav-item">
+            <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+          </ul>
+        </div>
+          <div class="col-md-4 text-center text-md-start">
+            <p class="lead">Copyright &copy; 2021 Projektarbete HTML CSS</p>
+          </div>
+          <div class="col-md-4 text-center text-md-end h4">
+            <a href="https://www.twitter.com"><i class="bi bi-twitter text-dark mx-1"></i></a>
+            <a href="https://www.facebook.com"><i class="bi bi-facebook text-dark mx-1"></i></a>
+            <a href="https://www.instagram.com"><i class="bi bi-instagram text-dark mx-1"></i></a>
+          </div>
+      </div>
+    </div>
+  </footer>
+  </main>
+</body>
 </html>
