--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,7 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/"
+              <a class="nav-link" aria-current="page" href="/"
                 ><img src="img/dog-face.ico" style="width: 20px" /> Home</a
               >
             </li>
@@ -39,7 +39,7 @@
               <a class="nav-link" href="/aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/blog.html">Blog</a>
+              <a class="nav-link active" href="/blog.html">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/organisation.html">Organisation</a>
