--- a/aboutus.html
+++ b/aboutus.html
@@ -51,6 +51,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/blog.html">Blog</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/organisation.html">Organisation</a>
+            </li>
           </ul>
         </div>
       </div>
