--- a/organisation.html
+++ b/organisation.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Hund sida</title>
   <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/bootstrap.css">
-  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/style.css">
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/allstyle.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
@@ -37,7 +37,7 @@
                   <a class="nav-link" href="/HTML_CSS_projektarbete/blog.html">Blog</a>
                 <li>
                   <li class="nav-item">
-                    <a class="nav-link" href="/HTML_CSS_projektarbete/organisation.html">Organisation</a>
+                    <a class="nav-link active" href="/HTML_CSS_projektarbete/organisation.html">Organisation</a>
                 </li>
                 </li>
               </ul>
