--- a/aboutus.html
+++ b/aboutus.html
@@ -67,7 +67,9 @@
           <div class="contact-info">
             <p>Linjegatan 7, 302 50 Halmstad, Sverige</p>
           </div>
-          <div id="map"></div>
+          <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6025.3146545098225!2d12.873441965312516!3d56.66234887304344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4651a3bd30fa9f21%3A0x7dfeb09b8a8d41b0!2sEC%20Utbildning!5e0!3m2!1sen!2sse!4v1641907633884!5m2!1sen!2sse" loading="lazy" id="map"></iframe>
+          </div>
         </div>
         <form class="form-grid">
             <h3>Kontaktformulär <i class="bi bi-envelope"></i></h3>
@@ -135,16 +137,5 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-  <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
-
-  <script>
-      mapboxgl.accessToken = 'pk.eyJ1Ijoic2NobGViZW4iLCJhIjoiY2t4ZW8xdmE0MGJiYTJ3bnB0dXI5ajcxYiJ9.UFjjYeNSGz5w4AAL9t9y_Q';
-      var map = new mapboxgl.Map({
-      container: 'map',
-      style: 'mapbox://styles/mapbox/streets-v11',
-      center: [12.881578056122168, 56.66284869224564],
-      zoom: 14,
-      });
-  </script>
 </body>
 </html>
