la till active + organisation

--- a/ourdogs.html
+++ b/ourdogs.html
@@ -30,13 +30,16 @@
                 Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link active" aria-current="page" href="/ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/blog.html">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
