--- a/aurora.html
+++ b/aurora.html
@@ -38,6 +38,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/blog.html">Blog</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/organisation.html">Organisation</a>
+              </li>
             </ul>
           </div>
         </div>
