--- a/erika.html
+++ b/erika.html
@@ -10,6 +10,7 @@
   <title>Hund sida</title>
   <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/bootstrap.css">
   <link rel="stylesheet" href="/HTML_CSS_projektarbete/CSS/allstyle.css">
+  <link rel="stylesheet" href="/HTML_CSS_projektarbete/css/organisation.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 </head>
 <body>
