--- a/organisation.html
+++ b/organisation.html
@@ -25,7 +25,8 @@
             <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/HTML_CSS_projektarbete/Index.html" href="#"><img src="img/dog-face.ico" style="width: 20px;">
+                  <a class="nav-link" href="/HTML_CSS_projektarbete/Index.html" href="#">
+                    <img src="img/dog-face.ico" style="width: 20px">
                     Home</a>
                 </li>
                 <li class="nav-item">
