--- a/kenzo.html
+++ b/kenzo.html
@@ -60,15 +60,15 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <div class="img-number">1 / 3</div>
-                <img src="img/kenzo2.jpg" alt="First slide" class="d-block mx-auto" width="50%">
+                <img src="img/kenzo2.jpg" alt="First slide" class="d-block mx-auto w-50">
               </div>
               <div class="carousel-item">
                 <div class="img-number">2 / 3</div>
-                <img src="img/hund3.jpg" alt="Second slide" class="d-block mx-auto" width="50%">
+                <img src="img/hund3.jpg" alt="Second slide" class="d-block mx-auto w-50">
               </div>
               <div class="carousel-item">
                 <div class="img-number">3 / 3</div>
-                <img src="img/hund4.jpg" alt="Third slide" class="d-block mx-auto" width="50%">
+                <img src="img/hund4.jpg" alt="Third slide" class="d-block mx-auto w-50">
               </div>
             </div>
           </div>
