--- a/ourdogs.html
+++ b/ourdogs.html
@@ -54,7 +54,7 @@
    </div>
    <div class="container">
     <div class="row">
-      <div class="col-3 mt-4 img-border">
+      <div class="col-sm-3 mt-4 img-border">
         <a href="/aurora.html">
           <img src="img/valp1.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
           <div class="img-text text-center">
@@ -63,7 +63,7 @@
              <p>Lorem ipsum dolor sit, Hundar i Halmstad amet consectetur adipisicing elit. Nobis, ab.</p>
           </div>
       </div>
-      <div class="col-3 mt-4 img-border">
+      <div class="col-sm-3 mt-4 img-border">
         <a href="/kenzo.html">
           <img src="img/valp2.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
           <div class="img-text text-center">
@@ -72,7 +72,7 @@
              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Hundar i Halmstad Iure, laboriosam.</p>
           </div>
       </div>
-      <div class="col-3 mt-4 img-border">
+      <div class="col-sm-3 mt-4 img-border">
         <a href="/luna.html">
           <img src="img/valp3.jpg" alt="Valp" class="mx-auto d-block"  width="200" height="300">
           <div class="img-text text-center">
