--- a/blog.html
+++ b/blog.html
@@ -28,21 +28,21 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="/"
+              <a class="nav-link" aria-current="page" href="/HTML_CSS_projektarbete/Index.html"
                 ><img src="img/dog-face.ico" style="width: 20px" /> Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ourdogs.html">Our dogs</a>
+              <a class="nav-link" href="/HTML_CSS_projektarbete/ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/aboutus.html">Who we are</a>
+              <a class="nav-link" href="/HTML_CSS_projektarbete/aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="/blog.html">Blog</a>
+              <a class="nav-link active" href="/HTML_CSS_projektarbete/blog.html">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/organisation.html">Organisation</a>
+              <a class="nav-link" href="/HTML_CSS_projektarbete/organisation.html">Organisation</a>
             </li>
           </ul>
         </div>
