--- a/organisation.html
+++ b/organisation.html
@@ -122,19 +122,19 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="/Index.html" class="nav-link text-dark">Home</a>
+              <a href="Index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
-              <a href="/ourdogs.html" class="nav-link text-dark">Our dogs</a>
+              <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a href="/aboutus.html" class="nav-link text-dark">About us</a>
+              <a href="aboutus.html" class="nav-link text-dark">About us</a>
             </li>
             <li class="nav-item">
-              <a href="/blog.html" class="nav-link text-dark">Blog</a>
+              <a href="blog.html" class="nav-link text-dark">Blog</a>
             </li>
             <li class="nav-item">
-              <a href="/organisation.html" class="nav-link text-dark">Organisation</a>
+              <a href="organisation.html" class="nav-link text-dark">Organisation</a>
           </ul>
         </div>
         <div class="col-md-4 text-center text-md-start">
