--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
               <a class="nav-link" href="ourdogs.html">Our dogs</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="/aboutus.html">Who we are</a>
+              <a class="nav-link active" aria-current="page" href="aboutus.html">Who we are</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="blog.html">Blog</a>
