--- a/aboutus.html
+++ b/aboutus.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="Index.html"><img src="img/dog-face.ico" style="width: 20px;" alt="dog-face">
+              <a class="nav-link" href="index.html"><img src="img/dog-face.ico" style="width: 20px;" alt="dog-face">
                 Home</a>
             </li>
             <li class="nav-item">
@@ -98,7 +98,7 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="Index.html" class="nav-link text-dark">Home</a>
+              <a href="index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
               <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
