--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
       <div class="collapse navbar-collapse" id="SmallScreenNavigationBar">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="Index.html"><img src="img/dog-face.ico" style="width: 20px" /> Home</a>
+            <a class="nav-link" aria-current="page" href="index.html"><img src="img/dog-face.ico" style="width: 20px" /> Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ourdogs.html">Our dogs</a>
@@ -190,7 +190,7 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="Index.html" class="nav-link text-dark">Home</a>
+              <a href="index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
               <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
