--- a/organisation.html
+++ b/organisation.html
@@ -122,7 +122,7 @@
         <div class="col-md-6 text-center">
           <ul class="nav">
             <li class="nav-item">
-              <a href="Index.html" class="nav-link text-dark">Home</a>
+              <a href="index.html" class="nav-link text-dark">Home</a>
             </li>
             <li class="nav-item">
               <a href="ourdogs.html" class="nav-link text-dark">Our dogs</a>
